# strider

./: .gitignore  .gitignore_global  CLAUDE.md  PRD-StepTrace.md  README.md  melhorias-plan-01.md  melhorias-plan-1.5.md  sessao-1.md
.github/workflows/: build.yml
steptrace/: LICENSE  README.md  index.html  package-lock.json  package.json
steptrace/.github/workflows/: build.yml
steptrace/src/: App.css  App.tsx  main.tsx  theme.ts
steptrace/src-tauri/: Cargo.toml  tauri.conf.json
steptrace/src-tauri/capabilities/: default.json
steptrace/src-tauri/src/: capture.rs  clipboard.rs  focus_watcher.rs  lib.rs  main.rs  mouse_watcher.rs  session.rs  tray.rs
steptrace/src-tauri/src/export/: markdown.rs
steptrace/src/components/: ExportDialog.tsx  LiveStepFeed.tsx  ReviewPanel.tsx  SessionsList.tsx  SettingsPanel.tsx  StatusBadge.tsx  StepCard.tsx  StepPreviewModal.tsx
steptrace/src/hooks/: useClipboardDetect.ts  useSession.ts
steptrace/src/i18n/: index.ts
steptrace/src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt-BR.json  ru.json  zh-CN.json
steptrace/src/types/: index.ts
steptrace/src/utils/: format.ts
