[package]
name = "strider"
version = "0.1.0"
description = "Strider — gravador de sessões de navegação entre janelas"
authors = ["you"]
edition = "2021"

[lib]
name = "strider_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Captura de janela
xcap = "0.4"

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data/hora
chrono = { version = "0.4", features = ["serde"] }

# Imagens
image = "0.25"
imageproc = "0.25"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
] }
